Correcting reset button contrast and adding meta description for lighthouse improvement

--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ input {
   font-weight: 700;
   letter-spacing: 0.3px;
   color: hsl(183, 100%, 15%);
-  background-color: hsl(172, 67%, 45%);
+  background-color: hsl(172, 67%, 48%);
   transition: 0.2s ease all;
 }
 
